@@ -1264,7 +1264,7 @@ ML_file \<open>Tools/simpdata.ML\<close>
 ML \<open>open Simpdata\<close>
 
 setup \<open>
-  map_theory_simpset (put_simpset HOL_basic_ss) #>
+  Simplifier.map_theory_simpset (put_simpset HOL_basic_ss) #>
   Simplifier.method_setup Splitter.split_modifiers
 \<close>
 
@@ -1923,10 +1923,10 @@ lemma ASSUMPTION_D: "ASSUMPTION A \<Longrightarrow> A"
   by (simp add: ASSUMPTION_def)
 
 setup \<open>
-  (map_theory_simpset o Simplifier.add_unsafe_solver) (
+  Simplifier.map_theory_simpset (Simplifier.add_unsafe_solver (
     Simplifier.mk_solver "ASSUMPTION" (fn ctxt =>
       resolve_tac ctxt @{thms ASSUMPTION_I} THEN'
-      resolve_tac ctxt (Simplifier.prems_of ctxt)))
+      resolve_tac ctxt (Simplifier.prems_of ctxt))))
 \<close>
 
 
