@@ -653,7 +653,7 @@ local_setup \<open>
 end
 
 setup \<open>
-  map_theory_simpset (fn ctxt0 => ctxt0 |> Simplifier.add_unsafe_solver
+  Simplifier.map_theory_simpset (Simplifier.add_unsafe_solver
     (Simplifier.mk_solver "partial and linear orders" (fn ctxt => HOL_Order_Tac.tac (Simplifier.prems_of ctxt) ctxt)))
 \<close>
 
