@@ -11,7 +11,7 @@ begin
 ML_file \<open>simpdata.ML\<close>
 
 setup \<open>
-  map_theory_simpset
+  Simplifier.map_theory_simpset
     (Simplifier.set_mksimps (fn ctxt => map mk_eq o ZF_atomize o Variable.gen_all ctxt)
       #> Simplifier.add_cong @{thm if_weak_cong})
 \<close>
